media/base/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  ports:
    - name: seerr
      port: 5055
      protocol: TCP
      targetPort: seerr
      appProtocol: http
    - name: metrics
      port: 9850
      protocol: TCP
      targetPort: metrics
      appProtocol: http
  selector:
    deployment: seerr
  sessionAffinity: None
  type: ClusterIP
