media/base/seerr/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: seerr
spec:
  port:
    targetPort: seerr
  to:
    kind: Service
    name: seerr
    weight: 100
  wildcardPolicy: None
